--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,9 @@ test {
 
 apply plugin : "java"
 
-// TODO overwrite with the new sonar.projectKey and sonar.organization
 sonarqube {
     properties {
-        property "sonar.projectKey", "fhery021_cli-template"
+        property "sonar.projectKey", "fhery021_mine-sweeper"
         property "sonar.organization", "fhery021"
         property "sonar.host.url", "https://sonarcloud.io"
     }
