--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,6 @@ sonarqube {
         property 'sonar.tests', "src/test"
         property "sonar.java.test.binaries", "build/classes/java/test"
         property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml"
+        property "sonar.junit.reportsPath", "app/build/test-results/*/TEST-*.xml"
     }
 }
