build: Sonar is not picking up my tests

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,12 @@ test {
     useJUnitPlatform()
 }
 
+jacocoTestReport {
+    reports {
+        xml.enabled true
+    }
+}
+
 apply plugin : "java"
 
 sonarqube {
